change userID to string
